[gd_scene load_steps=13 format=3 uid="uid://cmkpufeddl2ek"]

[ext_resource type="Script" path="res://Entities/Player/grid_player.gd" id="1_1spju"]
[ext_resource type="Texture2D" uid="uid://i6dahw3f6nk2" path="res://Sprites/Player/chara_sprite.png" id="1_hrhu2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thcgt"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_5ocdb"]
resource_name = "walk_down"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_rvrwg"]
resource_name = "walk_left"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_4oyox"]
resource_name = "walk_right"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_am0ti"]
resource_name = "walk_up"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xuxl4"]
_data = {
"walk_down": SubResource("Animation_5ocdb"),
"walk_left": SubResource("Animation_rvrwg"),
"walk_right": SubResource("Animation_4oyox"),
"walk_up": SubResource("Animation_am0ti")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efb0v"]
size = Vector2(48, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsai6"]
size = Vector2(48, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5sht"]
size = Vector2(4, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tiohw"]
size = Vector2(4, 48)

[node name="Grid_Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_1spju")

[node name="Player_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_hrhu2")
hframes = 3
vframes = 2

[node name="Player_Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_thcgt")
debug_color = Color(0.164706, 0.643137, 0, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 50.0
editor_draw_drag_margin = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xuxl4")
}

[node name="Area_down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_down"]
position = Vector2(0, 42)
shape = SubResource("RectangleShape2D_efb0v")

[node name="Area_up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_up"]
position = Vector2(0, -42)
shape = SubResource("RectangleShape2D_rsai6")

[node name="Area_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_left"]
position = Vector2(-42, 0)
shape = SubResource("RectangleShape2D_i5sht")

[node name="Area_right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_right"]
position = Vector2(42, 0)
shape = SubResource("RectangleShape2D_tiohw")

[connection signal="body_entered" from="Area_down" to="." method="_on_area_down_body_entered"]
[connection signal="body_exited" from="Area_down" to="." method="_on_area_down_body_exited"]
[connection signal="body_entered" from="Area_up" to="." method="_on_area_up_body_entered"]
[connection signal="body_exited" from="Area_up" to="." method="_on_area_up_body_exited"]
[connection signal="body_entered" from="Area_left" to="." method="_on_area_left_body_entered"]
[connection signal="body_exited" from="Area_left" to="." method="_on_area_left_body_exited"]
[connection signal="body_entered" from="Area_right" to="." method="_on_area_right_body_entered"]
[connection signal="body_exited" from="Area_right" to="." method="_on_area_right_body_exited"]
